edit: lab members bio

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -143,50 +143,64 @@
 
 
     <div class="lab-member-bio m-a-l">
-        <h1>Vlatka Zoldoš</h1>
-        <p>Vlatka Zoldoš, PhD, is a full professor at the University of Zagreb Faculty of Science, and a principle
-            investigator running a Laboratory for epigenetics at the Department of molecular biology. She completed her
-            PhD
-            at the University of Paris Sud XI in France in 2000 as a scholar of French government. She moved back to
-            Croatia
-            where she was elected as an assistant professor at the University of Zagreb Faculty of science in 2003. Her
-            main
-            research interest is epigenetics of protein glycosylation associated with human diseases. Her pioneering
-            efforts
-            in this field resulted in several prominent papers including the first demonstration of the epigenetic
-            regulation of plasma protein and IgG glycosylation. She and her team were the first who have developed
-            CRISPR/dCas9-based molecular tools for targeted DNA methylation/demethylation. She is involved in several
-            large
-            projects funded by EU foundations, and her group is a part of the Centre of Scientific Excellence in
-            Personalized Healthcare and Centre of Competence in Molecular Diagnostics in Croatia. She is teaching
-            Genetics,
-            Epigenetics and Molecular Cytogenetics for students of undergraduate and graduate studies of Master’s degree
-            in
-            Molecular Biology at the Faculty of Science and doctorate study of Biology at the University of Zagreb.
-            <br>
-            <b>vzoldos@zg.biol.pmf.hr</b>
-        </p>
+        <div class="lab-member-image">
+            <img src="assets/images/lab-members-vlatka.jpg">
+        </div>
+        <div class="lab-member-text">
+            <h1>Vlatka Zoldoš</h1>
+            <p>Vlatka Zoldoš, PhD, is a full professor at the University of Zagreb Faculty of Science, and a principle
+                investigator running a Laboratory for epigenetics at the Department of molecular biology. She completed
+                her
+                PhD
+                at the University of Paris Sud XI in France in 2000 as a scholar of French government. She moved back to
+                Croatia
+                where she was elected as an assistant professor at the University of Zagreb Faculty of science in 2003.
+                Her
+                main
+                research interest is epigenetics of protein glycosylation associated with human diseases. Her pioneering
+                efforts
+                in this field resulted in several prominent papers including the first demonstration of the epigenetic
+                regulation of plasma protein and IgG glycosylation. She and her team were the first who have developed
+                CRISPR/dCas9-based molecular tools for targeted DNA methylation/demethylation. She is involved in
+                several
+                large
+                projects funded by EU foundations, and her group is a part of the Centre of Scientific Excellence in
+                Personalized Healthcare and Centre of Competence in Molecular Diagnostics in Croatia. She is teaching
+                Genetics,
+                Epigenetics and Molecular Cytogenetics for students of undergraduate and graduate studies of Master’s
+                degree
+                in
+                Molecular Biology at the Faculty of Science and doctorate study of Biology at the University of Zagreb.
+                <br>
+                <b>vzoldos@zg.biol.pmf.hr</b>
+            </p>
+        </div>
     </div>
 
 
     <div class="lab-member-bio m-a-l">
-        <h1>Aleksandar Vojta</h1>
-        <p>Aleksandar Vojta obtained his Ph.D. (dr. rer. nat.) in 2006 from Ludwig-Maximilians-Universität in
-            Munich,
-            Germany, in the field of cell biology, with a focus on protein import into chloroplasts. He came back to
-            Croatia
-            and was working from 2007 to 2012 at the Faculty of Veterinary Medicine, University of Zagreb, where he
-            obtained
-            his second Ph.D. in Veterinary sciences. He joined Zoldoš Lab in 2012 working as a senior researcher on
-            Horizon2020 Regional Potential Project Integra-Life. In 2015, he was appointed assistant professor at
-            the
-            University of Zagreb, Faculty of Science, where he teaches courses in Cell biology, Genetic engineering,
-            Genetics and Population genetics for undergraduate and graduate students of Master’s degree in Molecular
-            Biology. His main research focus is a design of molecular tools for epigenome editing and gene
-            regulation based
-            on CRISPR/Cas9 technology and development of a transient system HEK293FreeStyle for IgG production.
-            <br>
-            <b>vojta@biol.pmf.hr</b>
-        </p>
+        <div class="lab-member-image">
+            <img src="assets/images/lab-members-aleksandar.jpg">
+        </div>
+        <div class="lab-member-text">
+            <h1>Aleksandar Vojta</h1>
+            <p>Aleksandar Vojta obtained his Ph.D. (dr. rer. nat.) in 2006 from Ludwig-Maximilians-Universität in
+                Munich,
+                Germany, in the field of cell biology, with a focus on protein import into chloroplasts. He came back to
+                Croatia
+                and was working from 2007 to 2012 at the Faculty of Veterinary Medicine, University of Zagreb, where he
+                obtained
+                his second Ph.D. in Veterinary sciences. He joined Zoldoš Lab in 2012 working as a senior researcher on
+                Horizon2020 Regional Potential Project Integra-Life. In 2015, he was appointed assistant professor at
+                the
+                University of Zagreb, Faculty of Science, where he teaches courses in Cell biology, Genetic engineering,
+                Genetics and Population genetics for undergraduate and graduate students of Master’s degree in Molecular
+                Biology. His main research focus is a design of molecular tools for epigenome editing and gene
+                regulation based
+                on CRISPR/Cas9 technology and development of a transient system HEK293FreeStyle for IgG production.
+                <br>
+                <b>vojta@biol.pmf.hr</b>
+            </p>
+        </div>
     </div>
 </ul>
