edit: lab members card

--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -200,20 +200,8 @@ h1, h2, h3, h4, p {
   }
 }
 
-.card__image--flowers {
-  background-image: url(https://unsplash.it/800/600?image=82);
-}
-
-.card__image--river {
-  background-image: url(https://unsplash.it/800/600?image=11);
-}
-
-.card__image--record {
-  background-image: url(https://unsplash.it/800/600?image=39);
-}
-
 .card__image--fence {
-  background-image: url(https://unsplash.it/800/600?image=59);
+  background-image: url("src/assets/images/lab-members-vlatka.jpg");
 }
 
 .card__title {
