edit: lab members card

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -83,12 +83,24 @@
 <ul class="cards">
     <li class="cards__item">
         <div class="card">
-            <div class="card__image card__image--fence"></div>
+            <div class="card__image card__image--lab-member"></div>
             <div class="card__content">
                 <div class="card__title">Vlatka Zoldoš</div>
                 <p class="card__text">Vlatka Zoldoš, PhD, is a full professor at the University of Zagreb Faculty of
                     Science, and a principle investigator running a Laboratory for epigenetics at the Department of
                     molecular biology. </p>
+                <button class="btn btn--block card__btn">Read More</button>
+            </div>
+        </div>
+    </li>
+    <li class="cards__item">
+        <div class="card">
+            <div class="card__image card__image--lab-member-aleksandar"></div>
+            <div class="card__content">
+                <div class="card__title">Aleksandar Vojta</div>
+                <p class="card__text">Aleksandar Vojta obtained his Ph.D. (dr. rer. nat.) in 2006 from
+                    Ludwig-Maximilians-Universität in Munich, Germany, in the field of cell biology, with a focus on
+                    protein import into chloroplasts. </p>
                 <button class="btn btn--block card__btn">Read More</button>
             </div>
         </div>
