--- a/app/src/app/researches/component/researches/researches.component.scss
+++ b/app/src/app/researches/component/researches/researches.component.scss
@@ -4,7 +4,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: -65px;
   &::before {
     position: absolute;
     content: '';
@@ -42,6 +41,9 @@
 
 .research-info {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .research-title {
@@ -64,4 +66,8 @@
   font-size: 20px;
   border: none;
   padding: 10px 20px;
+}
+
+.research-button-wrapper {
+  margin-top: auto;
 }
