--- a/app/src/app/components/blocks/landing-block/landing-block.component.html
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.html
@@ -1,5 +1,5 @@
 <div class="landing ">
-    <div class="landing-title">
+    <div class="landing-title-wrapper m-b-l">
         <h1>Landing</h1>
         <h4>EPIGENETICS OF PROTEIN GLYCOSYLATION BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h4>
     </div>
