--- a/app/src/app/components/blocks/landing-block/landing-block.component.scss
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.scss
@@ -1,22 +1,44 @@
 .landing {
   height: 100vh;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   background: url("../../../../assets/images/landing.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  &-title {
+  &-title-wrapper {
+    position: relative;
     text-align: center;
-    width: 60%;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     color: white;
+    padding: 20px 10px;
     h1 {
+      z-index: 40;
       color: white;
+    }
+    h4 {
+      max-width: 60%;
+      z-index: 40;
+      text-align: right;
     }
   }
 }
 
+
+.landing-title-wrapper:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: #323037;
+  opacity: .5;
+}
 
 
 
