--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -13,8 +13,7 @@
 <router-outlet></router-outlet>
 
 <footer>
-    <div class="footer">
-        <img class="logo-zoldos" src="assets/icons/logo.svg">
+    <div class="footer"><img class="logo-zoldos" src="assets/icons/logo.svg">
         <p><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of Biology,</b></p>
         <p><b>Facutly of Science University of Zagreb</b>.</p>
         <p>Horvatovac 102A</p>
