--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -32,7 +32,7 @@
 .links {
   margin: 0 10px;
   position: relative;
-  transition: all .2s;
+  transition: all .4s ease-in-out;
 
   &:hover {
     color: #74ebd5;
@@ -51,6 +51,7 @@
     color: #74ebd5;
     background: #74ebd5;
     height: 1px;
+    transition: all .4s ease-in-out;
   }
 
   &:hover::before {
