chore() style hotfix

--- a/app/src/app/researches/component/research/research.component.html
+++ b/app/src/app/researches/component/research/research.component.html
@@ -1,2 +1,11 @@
-<h1>{{item.title}}</h1>
 <scully-content></scully-content>
+<div class="grid m-t-xl">
+    <div class="col-8 b-r b-l">
+        <div class="col-12 ta-center">
+            <h1>{{item.title}}</h1>
+        </div>
+        <div class="wrapper">
+            <p class="research-author">{{item.author}}</p>
+        </div>
+    </div>
+</div>
