--- a/app/src/app/news/component/news/news.component.html
+++ b/app/src/app/news/component/news/news.component.html
@@ -18,7 +18,7 @@
                     <h5 class="news-title">{{item.title}}</h5>
                     <div class="flex jc-between ai-center">
                         <p class="news-author m-y-s">{{item.author}}</p>
-                        <p class="date">Date: 20.05.2019</p>
+                        <p class="date">{{item.date}}</p>
                     </div>
                     <p class="news-description" [innerHTML]="item.description | text"></p>
                     <div class="news-button-wrapper w-full flex jc-center">
