--- a/app/src/app/researches/component/research/research.component.html
+++ b/app/src/app/researches/component/research/research.component.html
@@ -1,4 +1,3 @@
-<scully-content></scully-content>
 <div class="grid m-t-xl">
     <div class="col-8 b-r b-l">
         <div class="col-12 ta-center">
@@ -6,6 +5,9 @@
         </div>
         <div class="wrapper">
             <p class="research-author">{{item.author}}</p>
+            <div class="research-image m-y-m" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
+            <p class="research-description" [innerHTML]="item.description | text"></p>
         </div>
     </div>
 </div>
+<scully-content></scully-content>
