--- a/app/src/app/news/component/news/news.component.html
+++ b/app/src/app/news/component/news/news.component.html
@@ -1,6 +1,6 @@
 <div class="main flex jc-center ai-center">
     <div class="col-5 c-light z-index ta-center">
-        <h1>Researches</h1>
+        <h1>{{page.title}}</h1>
     </div>
 </div>
 
