--- a/app/src/app/researches/component/research/research.component.html
+++ b/app/src/app/researches/component/research/research.component.html
@@ -1,3 +1,4 @@
+<section>
 <div class="grid m-t-xl">
     <div class="col-8 b-r b-l">
         <div class="col-12 ta-center">
@@ -11,3 +12,4 @@
     </div>
 </div>
 <scully-content></scully-content>
+</section>
