edit: landing page

--- a/app/src/app/components/blocks/landing-block/landing-block.component.html
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.html
@@ -1,7 +1,7 @@
 <div class="landing ">
     <div class="landing-title-wrapper m-b-l">
-        <h1>Landing</h1>
-        <h4>EPIGENETICS OF PROTEIN GLYCOSYLATION BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h4>
+        <h1>Zoldoš Lab</h1>
+        <h4>CRISPR/dCas9-based epignome editing</h4>
     </div>
 </div>
 
