--- a/app/src/app/components/blocks/landing-block/landing-block.component.scss
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.scss
@@ -1,4 +1,5 @@
 .landing {
+  font-family: Montserrat;
   height: 100vh;
   display: flex;
   align-items: flex-end;
@@ -8,6 +9,7 @@
   background-size: cover;
   background-position: center;
   &-title-wrapper {
+    text-transform: uppercase;
     position: relative;
     text-align: center;
     width: 85%;
@@ -19,6 +21,7 @@
     h1 {
       z-index: 40;
       color: white;
+
     }
     h4 {
       max-width: 60%;
