--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -16,7 +16,7 @@
     justify-content: flex-end;
     align-items: center;
     z-index: 40;
-    color: #74ebd5;
+    color: black;
   }
   &-logo {
     width: 5%;
