chore() adding layout for publications

--- a/app/src/app/publications/component/publications/publications.component.html
+++ b/app/src/app/publications/component/publications/publications.component.html
@@ -8,12 +8,9 @@
         <div class="col-12 ta-center">
             <h2>Publications</h2>
         </div>
-        <div class="col-12 flex fw-wrap">
-                <a href="" class="publication">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</a>
-                <a href="" class="m-y-s publication">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
-                <a href="" class="publication">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</a>
-                <a href="" class="m-y-s publication">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatu</a>
-                <a href="" class="publication">Sed ut perspiciatis unde omnis iste natus </a>
+        <div class="col-8 flex fw-wrap">
+            <p class="publication"><span class="name">Lorem ipsum dolor</span><b> Lorem ipsum dolor sit amet</b> <br> <span> consectetur adipiscing elit</span></p>
+            <a href="" class="link">Publication</a>
         </div>
     </div>
 </section>
