--- a/app/src/app/publications/component/publications/publications.component.html
+++ b/app/src/app/publications/component/publications/publications.component.html
@@ -1,6 +1,6 @@
 <div class="main flex jc-center ai-center">
     <div class="col-5 c-light z-index ta-center">
-        <h1>Publications</h1>
+        <h1>{{page.title}}</h1>
     </div>
 </div>
 <section class="m-y-xl">
@@ -8,8 +8,8 @@
         <div class="col-12 ta-center">
             <h2>Publications</h2>
         </div>
-        <div class="col-8 flex fw-wrap">
-            <p class="publication"><span class="name">Lorem ipsum dolor</span><b> Lorem ipsum dolor sit amet</b> <br> <span> consectetur adipiscing elit</span></p>
+        <div class="col-8 flex fw-wrap" *ngFor="let item of items$ | async">
+            <p class="publication"><span class="name">{{item.name}}</span><b>{{item.title}}</b> <br> <span>{{item.description}}</span></p>
             <a href="" class="link">Publication</a>
         </div>
     </div>
