edit: research content and lab member content

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -4,8 +4,8 @@
     <h3 class="m-a-s">Meet our lab members</h3>
 </div>
 
-<ul class="cards">
-    <li class="cards__item">
+<div class="cards jc-center">
+    <div class="cards__item">
         <div class="card">
             <div class="card__image card__image--lab-member"></div>
             <div class="card__content">
@@ -16,8 +16,8 @@
                 <button class="btn btn--block card__btn">Read More</button>
             </div>
         </div>
-    </li>
-    <li class="cards__item">
+    </div>
+    <div class="cards__item">
         <div class="card">
             <div class="card__image card__image--lab-member-aleksandar"></div>
             <div class="card__content">
@@ -28,7 +28,7 @@
                 <button class="btn btn--block card__btn">Read More</button>
             </div>
         </div>
-    </li>
+    </div>
 
     <div class="lab-member-bio m-a-l">
         <div class="lab-member-image">
@@ -90,4 +90,4 @@
             </p>
         </div>
     </div>
-</ul>
+</div>
