--- a/app/src/app/researches/component/researches/researches.component.html
+++ b/app/src/app/researches/component/researches/researches.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>-->
     <section class="research-image-block m-y-xl">
-        <div class="grid jc-start">
+        <div class="grid jc-center">
 
             <div class="research-image-block-wrapper m-b-l">
                 <div class="research-image-block-text">
