--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,4 +1,3 @@
-
 <div>
     <h1 class="m-a-s">LAB MEMBERS</h1>
     <h3 class="m-a-s">Meet our lab members</h3>
@@ -30,7 +29,7 @@
         </div>
     </div>
 
-    <div class="lab-member-bio m-a-l">
+    <div class="lab-member-bio m-a-l flex">
         <div class="lab-member-image">
             <img src="assets/images/lab-members-vlatka.jpg">
         </div>
@@ -65,7 +64,7 @@
         </div>
     </div>
 
-    <div class="lab-member-bio m-a-l">
+    <div class="lab-member-bio m-a-l flex">
         <div class="lab-member-image">
             <img src="assets/images/lab-members-aleksandar.jpg">
         </div>
