--- a/app/src/app/researches/component/researches/researches.component.scss
+++ b/app/src/app/researches/component/researches/researches.component.scss
@@ -1,3 +1,7 @@
+h1, h2, h3, h4, p {
+  font-family: helvetica;
+}
+
 .main {
   height: 100vh;
   background-image: url("../../../../assets/images/research-main.jpg");
