--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -64,9 +64,6 @@
   }
 }
 
-.logo {
-  font-size: 35px;
-}
 .logo-zoldos {
   width: 100px;
 }
@@ -74,5 +71,5 @@
 .footer {
   text-align: center;
   background-color: white;
-  border: black;
+  border-style: groove;
 }
