--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -16,11 +16,11 @@
 
 <footer>
     <div class="footer"><img class="logo-zoldos" src="assets/icons/logo.svg">
-        <p><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of Biology,</b></p>
-        <p><b>Facutly of Science University of Zagreb</b>.</p>
+        <p class="footer-paragraph m-t-m"><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of Biology,</b></p>
+        <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
         <p>Horvatovac 102A</p>
         <p>10 000 Zagreb, Croatia</p>
         <p>Tel- +385 1 4606260</p>
-        <p>Fax. +385 1 4606286</p>
+        <p class="footer-paragraph m-b-m">Fax. +385 1 4606286</p>
     </div>
 </footer>
