edit: changed logo

--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -15,7 +15,7 @@
 <router-outlet></router-outlet>
 
 <footer>
-    <div class="footer"><img class="logo-zoldos" src="assets/icons/logo.svg">
+    <div class="footer"><img class="logo-zoldos m-t-m" src="assets/icons/logo.svg">
         <p class="footer-paragraph m-t-m"><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of Biology,</b></p>
         <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
         <p>Horvatovac 102A</p>
