edit: footer logos

--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -15,12 +15,18 @@
 <router-outlet></router-outlet>
 
 <footer>
-    <div class="footer"><img class="logo-zoldos m-t-m" src="assets/icons/logo.svg">
-        <p class="footer-paragraph m-t-m"><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of Biology,</b></p>
-        <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
-        <p>Horvatovac 102A</p>
-        <p>10 000 Zagreb, Croatia</p>
-        <p>Tel- +385 1 4606260</p>
-        <p class="footer-paragraph m-b-m">Fax. +385 1 4606286</p>
-    </div>
+    <section class="footer">
+        <div class="footer-logos">
+        <img class="logo-university m-t-m ai-center" src="assets/icons/university-logo.svg">
+        <img class="logo-zoldos m-t-m ai-center" src="assets/icons/logo.svg">
+        <img class="logo-biology m-t-m ai-center" src="assets/icons/biology-logo.svg">
+        </div>
+            <p class="footer-paragraph m-t-m"><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of
+                Biology,</b></p>
+            <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
+            <p>Horvatovac 102A</p>
+            <p>10 000 Zagreb, Croatia</p>
+            <p>Tel- +385 1 4606260</p>
+            <p class="footer-paragraph m-b-m">Fax. +385 1 4606286</p>
+        </section>
 </footer>
