--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -125,9 +125,6 @@ h1, h2, h3, h4, p {
 .cards {
   display: flex;
   flex-wrap: wrap;
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 .cards__item {
@@ -156,7 +153,7 @@ h1, h2, h3, h4, p {
   }
 }
 
-.card__content {
+.card_content {
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
@@ -212,9 +209,7 @@ h1, h2, h3, h4, p {
   margin-bottom: 1.25rem;
 }
 
-.lab-member-image {
-  width: 800px;
-}
+
 
 .lab-member-text {
   width: 650px;
