chore() small footer adjustments

--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -16,11 +16,14 @@
 
 <footer>
     <section class="footer">
-        <div class="footer-logos">
-        <img class="logo-university m-t-m ai-center" src="assets/icons/university-logo.svg">
-        <img class="logo-zoldos m-t-m ai-center" src="assets/icons/logo.svg">
-        <img class="logo-biology m-t-m ai-center" src="assets/icons/biology-logo.svg">
+        <div class="footer-logos m-t-m flex jc-center ai-center">
+            <div class="col-4 col-s-12 flex ai-center jc-between">
+            <img class="logo-university ai-center" src="assets/icons/university-logo.svg">
+            <img class="logo-zoldos ai-center m-x-m" src="assets/icons/logo.svg">
+            <img class="logo-biology ai-center" src="assets/icons/biology-logo.svg">
+            </div>
         </div>
+        <div class="col-12 ta-center">
             <p class="footer-paragraph m-t-m"><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of
                 Biology,</b></p>
             <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
@@ -28,5 +31,6 @@
             <p>10 000 Zagreb, Croatia</p>
             <p>Tel- +385 1 4606260</p>
             <p class="footer-paragraph m-b-m">Fax. +385 1 4606286</p>
+        </div>
         </section>
 </footer>
