--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -68,12 +68,15 @@
 
 .logo-zoldos {
   width: 100px;
+  height: 100px;
 }
 .logo-university{
   width: 80px;
+  height: 100px;
 }
 .logo-biology{
   width: 150px;
+  height: 100px;
 }
 
 .footer {
